--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,3 +2,15 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
