--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -14,3 +14,9 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+.not-overflowed {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
