--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -24,6 +24,7 @@ input[type='number'] {
 /* custom scrollbar */
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
